# spacebuild

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: check.yml  checks.yml  dev.yml  full.yml  publish.yml  release.yml
common/: Cargo.toml  lib.rs
godot/: .gitattributes  .gitignore  SourceCodePro-Bold.ttf.import  back.jpg.import  back.tres  button_disabled.tres  button_hover.tres  button_normal.tres  controller.gd  core.gd  core.gd.uid  env.tres  export_presets.cfg  galactic.gd  galactic.gd.uid  galactic.tscn  main.tscn  main_font.tres  main_font2.tres  player.gd  player.gd.uid  project.godot  tab_selected.tres  tab_unselected.tres  theme.tres  ui.gd  ui.gd.uid
godot/data/: Intergalactic_Spaceship-(FBX 7.4 binary).fbx.import  back2.jpg.import  moon.FBX.import  point.png.import  reticle.png.import  spaceship.fbx.import
godot/data/Asteroid/: 10464_Asteroid_v1_Iterations-2.obj.import  10464_Asteroid_v1_diffuse.jpg.import
godot/data/Moon/: MoonMap2_2500x1250.jpg.import  moon-normal.jpg.import  moon.FBX.import  moon.obj.import  moonmap2k.jpg.import
godot/data/textures/: Intergalactic Spaceship Ao_Blender.jpg.import  Intergalactic Spaceship_color_4.jpg.import  Intergalactic Spaceship_curvature.jpg.import  Intergalactic Spaceship_emi.jpg.import  Intergalactic Spaceship_metalness.jpg.import  Intergalactic Spaceship_nmap_2_Tris.jpg.import  Intergalactic Spaceship_rough.jpg.import
godot/scenes/: asteroid.tscn  moon.tscn  planet.tscn  player.tscn  star.tscn
godot/theme/: SourceCodePro-Bold.ttf.import  button_hover.tres  main_font.tres  tab_selected.tres
server/: Cargo.toml  main.rs
siege/: Cargo.toml  main.rs
viewer/: Cargo.toml  main.rs
