[package]
name = "common"
version = "0.1.0"
authors = ["Pierre-Alexandre Goya <pierre.alexandre.goya@gmail.com>"]
edition = "2021"

[lib]
path = "lib.rs"
test = false
doctest = false

[dependencies]
colored = {version = "2.1.0"}
env_logger = {version = "0.11.5"}
tokio = {version = "1.42.0", features = ["time"]}
regex = "1.11.1"
